@@ -215,6 +215,8 @@
 	for the last argument of Ptrace(), not TRUE/FALSE.
 	* libdtrace/dt_pid.c (dt_pid_create_usdt_probes): Don't
 	Pupdate_maps().
+	* test/triggers/pid-tst-gcc.c (go): Don't use a NULL argv
+	or spam stdout.
 
 2013-06-04  Nick Alcock  <nick.alcock@oracle.com>
 
